<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray">

        <!-- Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- Botó d'accés a panell esquerre-->
            <ImageButton
                android:id="@+id/boto_acces_panell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:onClick="accedirPanell"
                android:src="@drawable/ic_menu" />

            <!-- Logo de l'aplicació -->
            <ImageView
                android:id="@+id/image_logo"
                android:layout_width="95dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/fithub_logo"
                android:contentDescription="logo" />

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:id="@+id/layout_titol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="50dp">

            <!-- Títol de l'activitat -->
            <TextView
                android:id="@+id/text_titol_gestions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/reservar"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <!-- Botons de reserva -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_titol"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintTop_toBottomOf="@+id/layout_titol">

            <Button
                android:id="@+id/boto_reserva1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:text="Reservar activitat per dia"
                android:background="@drawable/boto_personalitzat"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp"/>

            <Button
                android:id="@+id/boto_reserva2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:text="Reservar activitat per nom"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp"/>

            <Button
                android:id="@+id/boto_reserva3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:text="Les meves reserves"
                android:background="@drawable/boto_personalitzat"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp"/>

        </LinearLayout>

        <!-- Botó de perfil -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/boto_perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_missatge"
            android:backgroundTint="?attr/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:backgroundTint="@color/light_gray"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/black"
        app:headerLayout="@layout/nav_capcalera"
        app:menu="@menu/menu_navigation_client">

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>