...
                android:paddingLeft="20dp"
                android:layout_below="@+id/tvTitol"  />

        </RelativeLayout>

        <Spinner
            android:id="@+id/spinnerActivitats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvClassesDirigides"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="10dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
...
