...
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="Reserves disponibles:" />

        <!-- RecyclerView per mostrar les reserves -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvReserves"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="10dp" />

        <!-- FloatingActionButton per mostrar els missatges -->
...
